[package]
name = "markdown-html-finder"
version = "0.1.0"
edition = "2018"
authors =[]

[lib]
name = "markdown_html_finder"
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = "0.5.3"

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
