[tool.poetry]
name = "markdown-html-finder"
version = "0.2.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
wheel = "^0.35.1"
toml = "^0.10.2"
ipython = "^7.19"
flake8 = {version = "^3.8",allows-prereleases = true}
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = {version = "^5.6",allows-prereleases = true}
mypy = "^0.790.0"
twine = "^3.2"
maturin = "^0.8.3"
